logs/Slang/generated/keywords/5.6.2--keyword_signed.sv.log
name: keyword_signed
description: The 'signed' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_signed.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_signed.sv:8:15: error: expected declarator
    bit signed;
              ^
